[package]
name = "rfcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tree-sitter = "0.22.6"
tree-sitter-python = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21.1"
tree-sitter-rust = "0.21"
tree-sitter-bash = "0.21"
tree-sitter-json = "0.21"
tree-sitter-markdown = "0.7.1"
regex = "1.10.4"
clap = "4.5.4"
